<resources>
    <string name="app_name">SAOIF WIKI</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Yansam</string>
    <string name="nav_header_subtitle">1anxuf@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_ability_rush">能力(觉醒)</string>
    <string name="menu_ability_4">能力(4*)</string>
    <string name="menu_ability_3">能力(3*)</string>
    <string name="menu_ability_2">能力(2*)</string>
    <string name="menu_ability_1">能力(1*)</string>
    <string name="menu_sword_rush">直剑(觉醒)</string>
    <string name="menu_sword_mod">直剑(MOD)</string>
    <string name="menu_sword_burst">直剑(爆发)</string>
    <string name="menu_sword_connect">直剑(连接)</string>
    <string name="menu_sword_4">直剑(4*)</string>
    <string name="menu_sword_3">直剑(3*)</string>
    <string name="menu_sword_2">直剑(2*)</string>
    <string name="menu_sword_1">直剑(1*)</string>
    <string name="menu_rapier_rush">细剑(觉醒)</string>
    <string name="menu_rapier_mod">细剑(MOD)</string>
    <string name="menu_rapier_burst">细剑(爆发)</string>
    <string name="menu_rapier_connect">细剑(连接)</string>
    <string name="menu_rapier_4">细剑(4*)</string>
    <string name="menu_rapier_3">细剑(3*)</string>
    <string name="menu_rapier_2">细剑(2*)</string>
    <string name="menu_rapier_1">细剑(1*)</string>
    <string name="menu_club_rush">棍(觉醒)</string>
    <string name="menu_club_mod">棍(MOD)</string>
    <string name="menu_club_burst">棍(爆发)</string>
    <string name="menu_club_connect">棍(连接)</string>
    <string name="menu_club_4">棍(4*)</string>
    <string name="menu_club_3">棍(3*)</string>
    <string name="menu_club_2">棍(2*)</string>
    <string name="menu_club_1">棍(1*)</string>
    <string name="menu_dagger_rush">匕首(觉醒)</string>
    <string name="menu_dagger_mod">匕首(MOD)</string>
    <string name="menu_dagger_burst">匕首(爆发)</string>
    <string name="menu_dagger_connect">匕首(连接)</string>
    <string name="menu_dagger_4">匕首(4*)</string>
    <string name="menu_dagger_3">匕首(3*)</string>
    <string name="menu_dagger_2">匕首(2*)</string>
    <string name="menu_dagger_1">匕首(1*)</string>
    <string name="menu_shield_rush">盾(觉醒)</string>
    <string name="menu_shield_mod">盾(MOD)</string>
    <string name="menu_shield_burst">盾(爆发)</string>
    <string name="menu_shield_connect">盾(连接)</string>
    <string name="menu_shield_4">盾(4*)</string>
    <string name="menu_shield_3">盾(3*)</string>
    <string name="menu_shield_2">盾(2*)</string>
    <string name="menu_shield_1">盾(1*)</string>
    <string name="menu_axe_rush">斧(觉醒)</string>
    <string name="menu_axe_mod">斧(MOD)</string>
    <string name="menu_axe_burst">斧(爆发)</string>
    <string name="menu_axe_connect">斧(连接)</string>
    <string name="menu_axe_4">斧(4*)</string>
    <string name="menu_axe_3">斧(3*)</string>
    <string name="menu_axe_2">斧(2*)</string>
    <string name="menu_axe_1">斧(1*)</string>
    <string name="menu_bow_rush">弓(觉醒)</string>
    <string name="menu_bow_mod">弓(MOD)</string>
    <string name="menu_bow_burst">弓(爆发)</string>
    <string name="menu_bow_connect">弓(连接)</string>
    <string name="menu_bow_4">弓(4*)</string>
    <string name="menu_bow_3">弓(3*)</string>
    <string name="menu_bow_2">弓(2*)</string>
    <string name="menu_bow_1">弓(1*)</string>
    <string name="menu_spear_rush">枪(觉醒)</string>
    <string name="menu_spear_mod">枪(MOD)</string>
    <string name="menu_spear_burst">枪(爆发)</string>
    <string name="menu_spear_connect">枪(连接)</string>
    <string name="menu_spear_4">枪(4*)</string>
    <string name="menu_spear_3">枪(3*)</string>
    <string name="menu_spear_2">枪(2*)</string>
    <string name="menu_spear_1">枪(1*)</string>
    <string name="menu_slideshow">Slideshow</string>
</resources>