<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:title="能力">
            <menu>
                <group>
                    <item
                        android:id="@+id/nav_ability_rush"
                        android:icon="@drawable/ic_menu_gallery"
                        android:title="@string/menu_ability_rush" />

                    <item
                        android:id="@+id/nav_ability_4"
                        android:icon="@drawable/ic_menu_gallery"
                        android:title="@string/menu_ability_4" />
                    <item
                        android:id="@+id/nav_ability_3"
                        android:icon="@drawable/ic_menu_gallery"
                        android:title="@string/menu_ability_3" />
                    <item
                        android:id="@+id/nav_ability_2"
                        android:icon="@drawable/ic_menu_gallery"
                        android:title="@string/menu_ability_2" />
                    <item
                        android:id="@+id/nav_ability_1"
                        android:icon="@drawable/ic_menu_gallery"
                        android:title="@string/menu_ability_1" />
                </group>
            </menu>

        </item>


        <item
            android:id="@+id/nav_sword_home"
            android:title="单手直剑">
            <menu>
                <group>

                    <item
                        android:id="@+id/nav_sword_mod"
                        android:icon="@drawable/ic_menu_gallery"
                        android:title="@string/menu_sword_mod" />
                    <item
                        android:id="@+id/nav_sword_rush"
                        android:icon="@drawable/ic_menu_gallery"
                        android:title="@string/menu_sword_rush" />
                    <item
                        android:id="@+id/nav_sword_connect"
                        android:icon="@drawable/ic_menu_gallery"
                        android:title="@string/menu_sword_connect" />
                    <item
                        android:id="@+id/nav_sword_burst"
                        android:icon="@drawable/ic_menu_gallery"
                        android:title="@string/menu_sword_burst" />
                    <item
                        android:id="@+id/nav_sword_4"
                        android:icon="@drawable/ic_menu_gallery"
                        android:title="@string/menu_sword_4" />
                    <item
                        android:id="@+id/nav_sword_3"
                        android:icon="@drawable/ic_menu_gallery"
                        android:title="@string/menu_sword_3" />
                    <item
                        android:id="@+id/nav_sword_2"
                        android:icon="@drawable/ic_menu_gallery"
                        android:title="@string/menu_sword_2" />
                    <item
                        android:id="@+id/nav_sword_1"
                        android:icon="@drawable/ic_menu_gallery"
                        android:title="@string/menu_sword_1"
                        app:showAsAction="ifRoom" />
                </group>

            </menu>
        </item>

        <item
            android:id="@+id/nav_rapier_home"
            android:title="单手细剑">
            <menu>
                <item
                    android:id="@+id/nav_rapier_mod"
                    android:icon="@drawable/ic_menu_gallery"
                    android:title="@string/menu_rapier_mod" />
                <item
                    android:id="@+id/nav_rapier_rush"
                    android:icon="@drawable/ic_menu_gallery"
                    android:title="@string/menu_rapier_rush" />
                <item
                    android:id="@+id/nav_rapier_connect"
                    android:icon="@drawable/ic_menu_gallery"
                    android:title="@string/menu_rapier_connect" />
                <item
                    android:id="@+id/nav_rapier_burst"
                    android:icon="@drawable/ic_menu_gallery"
                    android:title="@string/menu_rapier_burst" />
                <item
                    android:id="@+id/nav_rapier_4"
                    android:icon="@drawable/ic_menu_gallery"
                    android:title="@string/menu_rapier_4" />
                <item
                    android:id="@+id/nav_rapierd_3"
                    android:icon="@drawable/ic_menu_gallery"
                    android:title="@string/menu_rapier_3" />
                <item
                    android:id="@+id/nav_rapier_2"
                    android:icon="@drawable/ic_menu_gallery"
                    android:title="@string/menu_rapier_2" />
                <item
                    android:id="@+id/nav_rapier_1"
                    android:icon="@drawable/ic_menu_gallery"
                    android:title="@string/menu_rapier_1" />
            </menu>
        </item>

        <item
            android:title="单手棍">
            <menu>
                <item
                    android:id="@+id/nav_club_mod"
                    android:icon="@drawable/ic_menu_gallery"
                    android:title="@string/menu_club_mod" />
                <item
                    android:id="@+id/nav_club_rush"
                    android:icon="@drawable/ic_menu_gallery"
                    android:title="@string/menu_club_rush" />
                <item
                    android:id="@+id/nav_club_connect"
                    android:icon="@drawable/ic_menu_gallery"
                    android:title="@string/menu_club_connect" />
                <item
                    android:id="@+id/nav_club_burst"
                    android:icon="@drawable/ic_menu_gallery"
                    android:title="@string/menu_club_burst" />
                <item
                    android:id="@+id/nav_club_4"
                    android:icon="@drawable/ic_menu_gallery"
                    android:title="@string/menu_club_4" />
                <item
                    android:id="@+id/nav_club_3"
                    android:icon="@drawable/ic_menu_gallery"
                    android:title="@string/menu_club_3" />
                <item
                    android:id="@+id/nav_club_2"
                    android:icon="@drawable/ic_menu_gallery"
                    android:title="@string/menu_club_2" />
                <item
                    android:id="@+id/nav_club_1"
                    android:icon="@drawable/ic_menu_gallery"
                    android:title="@string/menu_club_1" />
            </menu>

        </item>

        <item
            android:title="匕首">
            <menu>
                <item
                    android:id="@+id/nav_dagger_mod"
                    android:icon="@drawable/ic_menu_gallery"
                    android:title="@string/menu_dagger_mod" />
                <item
                    android:id="@+id/nav_dagger_rush"
                    android:icon="@drawable/ic_menu_gallery"
                    android:title="@string/menu_dagger_rush" />
                <item
                    android:id="@+id/nav_dagger_connect"
                    android:icon="@drawable/ic_menu_gallery"
                    android:title="@string/menu_dagger_connect" />
                <item
                    android:id="@+id/nav_dagger_burst"
                    android:icon="@drawable/ic_menu_gallery"
                    android:title="@string/menu_dagger_burst" />
                <item
                    android:id="@+id/nav_dagger_4"
                    android:icon="@drawable/ic_menu_gallery"
                    android:title="@string/menu_dagger_4" />
                <item
                    android:id="@+id/nav_dagger_3"
                    android:icon="@drawable/ic_menu_gallery"
                    android:title="@string/menu_dagger_3" />
                <item
                    android:id="@+id/nav_dagger_2"
                    android:icon="@drawable/ic_menu_gallery"
                    android:title="@string/menu_dagger_2" />
                <item
                    android:id="@+id/nav_dagger_1"
                    android:icon="@drawable/ic_menu_gallery"
                    android:title="@string/menu_dagger_1" />
            </menu>

        </item>

        <item
            android:title="盾">
            <menu>
                <item
                    android:id="@+id/nav_shield_mod"
                    android:icon="@drawable/ic_menu_gallery"
                    android:title="@string/menu_shield_mod" />
                <item
                    android:id="@+id/nav_shield_rush"
                    android:icon="@drawable/ic_menu_gallery"
                    android:title="@string/menu_shield_rush" />
                <item
                    android:id="@+id/nav_shield_connect"
                    android:icon="@drawable/ic_menu_gallery"
                    android:title="@string/menu_shield_connect" />
                <item
                    android:id="@+id/nav_shield_burst"
                    android:icon="@drawable/ic_menu_gallery"
                    android:title="@string/menu_shield_burst" />
                <item
                    android:id="@+id/nav_shield_4"
                    android:icon="@drawable/ic_menu_gallery"
                    android:title="@string/menu_shield_4" />
                <item
                    android:id="@+id/nav_shield_3"
                    android:icon="@drawable/ic_menu_gallery"
                    android:title="@string/menu_shield_3" />
                <item
                    android:id="@+id/nav_shield_2"
                    android:icon="@drawable/ic_menu_gallery"
                    android:title="@string/menu_shield_2" />
                <item
                    android:id="@+id/nav_shield_1"
                    android:icon="@drawable/ic_menu_gallery"
                    android:title="@string/menu_shield_1" />
            </menu>

        </item>

        <item
            android:title="双手斧">
            <menu>
                <item
                    android:id="@+id/nav_axe_mod"
                    android:icon="@drawable/ic_menu_gallery"
                    android:title="@string/menu_axe_mod" />
                <item
                    android:id="@+id/nav_axe_rush"
                    android:icon="@drawable/ic_menu_gallery"
                    android:title="@string/menu_axe_rush" />
                <item
                    android:id="@+id/nav_axe_connect"
                    android:icon="@drawable/ic_menu_gallery"
                    android:title="@string/menu_axe_connect" />
                <item
                    android:id="@+id/nav_axe_burst"
                    android:icon="@drawable/ic_menu_gallery"
                    android:title="@string/menu_axe_burst" />
                <item
                    android:id="@+id/nav_axe_4"
                    android:icon="@drawable/ic_menu_gallery"
                    android:title="@string/menu_axe_4" />
                <item
                    android:id="@+id/nav_axe_3"
                    android:icon="@drawable/ic_menu_gallery"
                    android:title="@string/menu_axe_3" />
                <item
                    android:id="@+id/nav_axe_2"
                    android:icon="@drawable/ic_menu_gallery"
                    android:title="@string/menu_axe_2" />
                <item
                    android:id="@+id/nav_axe_1"
                    android:icon="@drawable/ic_menu_gallery"
                    android:title="@string/menu_axe_1" />
            </menu>

        </item>

        <item
            android:title="双手弓">
            <menu>
                <item
                    android:id="@+id/nav_bow_mod"
                    android:icon="@drawable/ic_menu_gallery"
                    android:title="@string/menu_bow_mod" />
                <item
                    android:id="@+id/nav_bow_rush"
                    android:icon="@drawable/ic_menu_gallery"
                    android:title="@string/menu_bow_rush" />
                <item
                    android:id="@+id/nav_bow_connect"
                    android:icon="@drawable/ic_menu_gallery"
                    android:title="@string/menu_bow_connect" />
                <item
                    android:id="@+id/nav_bow_burst"
                    android:icon="@drawable/ic_menu_gallery"
                    android:title="@string/menu_bow_burst" />
                <item
                    android:id="@+id/nav_bow_4"
                    android:icon="@drawable/ic_menu_gallery"
                    android:title="@string/menu_bow_4" />
                <item
                    android:id="@+id/nav_bow_3"
                    android:icon="@drawable/ic_menu_gallery"
                    android:title="@string/menu_bow_3" />
                <item
                    android:id="@+id/nav_bow_2"
                    android:icon="@drawable/ic_menu_gallery"
                    android:title="@string/menu_bow_2" />
                <item
                    android:id="@+id/nav_bow_1"
                    android:icon="@drawable/ic_menu_gallery"
                    android:title="@string/menu_bow_1" />
            </menu>

        </item>

        <item
            android:title="双手枪">
            <menu>
                <item
                    android:id="@+id/nav_spear_mod"
                    android:icon="@drawable/ic_menu_gallery"
                    android:title="@string/menu_spear_mod" />
                <item
                    android:id="@+id/nav_spear_rush"
                    android:icon="@drawable/ic_menu_gallery"
                    android:title="@string/menu_spear_rush" />
                <item
                    android:id="@+id/nav_spear_connect"
                    android:icon="@drawable/ic_menu_gallery"
                    android:title="@string/menu_spear_connect" />
                <item
                    android:id="@+id/nav_spear_burst"
                    android:icon="@drawable/ic_menu_gallery"
                    android:title="@string/menu_spear_burst" />
                <item
                    android:id="@+id/nav_spear_4"
                    android:icon="@drawable/ic_menu_gallery"
                    android:title="@string/menu_spear_4" />
                <item
                    android:id="@+id/nav_spear_3"
                    android:icon="@drawable/ic_menu_gallery"
                    android:title="@string/menu_spear_3" />
                <item
                    android:id="@+id/nav_spear_2"
                    android:icon="@drawable/ic_menu_gallery"
                    android:title="@string/menu_spear_2" />
                <item
                    android:id="@+id/nav_spear_1"
                    android:icon="@drawable/ic_menu_gallery"
                    android:title="@string/menu_spear_1" />
            </menu>

        </item>
    </group>
</menu>